--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -98,6 +98,19 @@ $(function() {
         <!-- AddThis Button END -->
       </div>
       
+      
+      
+      
+      
+      <div class="row center-index">
+      <% unless @gift.sku.blank? %>
+        <div>          
+          <iframe class="iframe-summary" src="<%= @iframe_url.gsub("&amp;", "&") %>" width="220" height="230" scrolling="no" border="none"></iframe>
+        </div>
+      <% end %>
+      <%= link_to "View All Amazon.com reviews", "#AmazonReviews" %><br><br>
+      </div>
+      
       <div class="row gift-buy-box2">
         <h4 style= "color: #53868B; text-align: center">Product Statistics</h4>
         <h5 style= "color: #53868B;">For Ages:</h5>
@@ -125,7 +138,7 @@ $(function() {
   <% unless @gift.sku.blank? %>
    <hr class="tab-content-line">
     <div>
-      <h4 class="qikki-font" style="color: #53868B">Reviews from Amazon</h4><br>
+      <h4 id ="AmazonReviews" class="qikki-font" style="color: #53868B">Reviews from Amazon</h4><br>
       <iframe class="iframe" src="<%= @iframe_url.gsub("&amp;", "&") %>" width="940" height="400" scrolling="auto" ></iframe>
     </div>
   <% end %>
