--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1445,6 +1445,7 @@ ul.photos-collage li {
   border: none;
   position: relative;
   z-index: -10;
-  top: -110px;
+  top: -80px;
   margin-bottom: -110px;
+  margin-left: 10px;
   }
