added ability to edit and delete child for parent

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,6 +38,8 @@
       <% @relationship_my_kids.each do |r| %>
       <li class="children-following child-list block">
         <%= render(:partial => 'child_list', :locals => {:r => r})%>
+        <%= link_to "Edit", edit_child_path(r.child), :class => "unfollow btn btn-mini btn-warning btn-spacing" %>
+        <%= link_to "Delete", r.child, :method => :delete, :data => {:confirm => "Are you sure you want to delete this child?"}, :remote => "true", :class => "unfollow btn btn-mini btn-danger btn-spacing" %>
       </li>  
       <% end %>
     </ul>
