--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1277,7 +1277,33 @@ ul img {
   border:none;    
   }
 
-#slideshow-caption {
+#myCarousel, #myCarousel img {
+  height: 300px;
+  }
+  
+.carousel-inner {
+  height: 300px;
+  }
+  
+.gallery-slideshow-caption {
+  width:580px;
+  height:80px;
+  position:absolute;
+  top:200px;
+  color:#fff;
+  background: $bubboli-red;
+  z-index:500;
+  opacity: 0.7;
+  filter:alpha(opacity=70);
+  padding: 10px;
+  }
+
+.gallery-slideshow-caption p {
+  font-size:14px;
+  font-weight: bold;
+  }
+
+/*#slideshow-caption {
   width:200px;
   height:300px;
   position:absolute;
@@ -1307,7 +1333,7 @@ ul img {
   padding-top:10px;
   font-size:14px;
   font-weight: bold;
-  }
+  }*/
   
 .featured_thumbs{  
   width: 90px;  
