--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
        <ul class="nav nav-pills pull-right">    
          <li class="<%= 'active' if controller.is_a?(GiftsController) %>"><%= link_to "SHOP", gifts_path %></li>
          <li class="<%= 'active' if controller.is_a?(BlogsController) %>"><%= link_to "BLOG", blogs_path %></li>
-         <li class="<%= 'active' if controller.is_a?(PagesController) %>"><%= link_to "ABOUT", about_path %></li>           
+         <li class="<%= 'active' if current_page?(about_path) %>"><%= link_to "ABOUT", about_path %></li>           
          <% if signed_in? %>
            <li id="fat-menu" class="dropdown <%= 'active' if controller.is_a?(UsersController) %> <%= 'active' if controller.is_a?(RelationshipsController) %>">
              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
