--- a/app/views/gifts/_featured_gifts.html.erb
+++ b/app/views/gifts/_featured_gifts.html.erb
@@ -7,7 +7,7 @@
           <ul class="no-margin-or-bullet">
             <li class="slide_gallery">
             <%= image_tag(@rotating_gift_image_first.gift_images.last.image_url(:ex_large_pic)) %>
-            <span class="gallery-slideshow-caption"><%= @rotating_gift_image_first.description %></span>
+            <span class="gallery-slideshow-caption"><%= truncate(@rotating_gift_image_first.description, length: 100) %></span>
             </li>
           </ul>
         </div>
