added name to the slideshow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1298,7 +1298,12 @@ ul img {
   padding: 10px;
   }
 
-.gallery-slideshow-caption p {
+h3.gallery-slideshow-h3 {
+  font-size:18px;
+  font-weight: bold;  
+  }
+
+p.gallery-slideshow-p {
   font-size:14px;
   font-weight: bold;
   }
