changed first vs last images for gift shows

--- a/app/views/gifts/_featured_gifts.html.erb
+++ b/app/views/gifts/_featured_gifts.html.erb
@@ -6,7 +6,7 @@
         <div class="item active">
           <ul class="no-margin-or-bullet">
             <li class="slide_gallery">
-            <%= image_tag(@rotating_gift_image_first.gift_images.last.image_url(:ex_large_pic)) %>
+            <%= image_tag(@rotating_gift_image_first.gift_images.first.image_url(:ex_large_pic)) %>
             <span class="gallery-slideshow-caption">
               <h3 class="gallery-slideshow-h3"><%= @rotating_gift_image_first.name %></h3>
               <p class="gallery-slideshow-p"><%= truncate(@rotating_gift_image_first.description, length: 150) %></p>
