fixed gift images for production

--- a/app/views/gifts/_gift_images.html.erb
+++ b/app/views/gifts/_gift_images.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class ="span4">
   <div id ="image" >
-    <%= image_tag(@gift.gift_images.first.image_url(:large_pic)) %>
+    <%= image_tag(@gift.gift_images.last.image_url(:large_pic)) %>
   </div>
   </div>
 
