removed add this tag to the end of each link

--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -26,8 +26,8 @@
 
   </script>
     
-  <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51a4c5f04864e4f4"></script>
+  <!-- <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51a4c5f04864e4f4"></script> -->
 
   <meta name="keywords" content="Toys and Games for Kids, Boys, Girls, Nieces, Nephews, Baby and Teens. Educational Toys, toy, toys for us. buy toys online. baby games, baby toys, 
   kids toys. Fisher price, Think fun, ThinkFun, Hasbro, Lego, Skip Hop, LeapFrog, Leap frog, Books" /> 
