added og properties to gifts index

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,3 +1,11 @@
+<% content_for :head do %>
+  <meta property="og:site_name" content="www.bubboli.com" />
+  <meta property="og:title" content="Bubboli Gifts and Toys" />
+  <meta property="og:url" content="www.bubboli.com/gifts" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Bubboli provides a curated list of unique and innovative kids' toys that offer unique playtime experiences for kids."/>
+<% end %>
+
 
 <div class="container">
     
