added og tags to different pages

--- a/app/views/gifts/favorite.html.erb
+++ b/app/views/gifts/favorite.html.erb
@@ -1,3 +1,12 @@
+<% content_for :head do %>
+  <meta property="og:site_name" content="www.bubboli.com" />
+  <meta property="og:title" content="Bubboli Favorites" />
+  <meta property="og:url" content="www.bubboli.com/gift/favorite" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="A collection of our favorite gifts / toys for the kids in your life for their birthday,
+  holiday or just because."/>
+<% end %>
+
 <% @page_title = "Bubboli's favorite gifts" %>
 <div class="container">
   
