--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,15 @@
+<% content_for :head do %>
+  <meta property="og:site_name" content="www.bubboli.com" />
+  <meta property="og:title" content="Bubboli - About Us" />
+  <meta property="og:url" content="www.bubboli.com/about" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Life is demanding and we know whether you're an aunt, uncle, cousin, 
+  friend or just a big kid at heart, sometimes you just don't have the time or don't know where to start looking
+  for the perfect gift / toy. That is where we come in. We do all the research and only present our favorite products 
+  on our site. Our ultimate goal is to make your life easier and this is just the beginning. Let us do the heavy 
+  lifting so you can spend more time with the ones that matter most."/>
+<% end %>
+
 <% @page_title = "Bubboli - about Bubboli" %>
 <div class="container">
     <div class="row">
