--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,11 @@
+<% content_for :head do %>
+  <meta property="og:site_name" content="www.bubboli.com" />
+  <meta property="og:title" content="Bubboli Blog" />
+  <meta property="og:url" content="www.bubboli.com/blog" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="<%= truncate(@blogs.last.content, :length => 168) %>"/>
+<% end %>
+
 <% @page_title = "Bubboli blog" %>
 
 <div class="container">
