--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
   
   <%= form_tag submit_path do %>
-    <%= text_field_tag 'email', nil, :placeholder => 'Your email address' %>
+    <%= text_field_tag :email, nil, :placeholder => 'Your email address' %>
     <%= submit_tag "Subscribe", :alt => "Subscribe", class: "btn btn-large green"%>
   <% end %>
   
