--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   
-  <%= form_tag submit_path do %>
+  <%= form_tag subscribe_path do %>
     <%= text_field_tag :email, nil, :placeholder => 'Your email address' %>
     <%= submit_tag "Subscribe", :alt => "Subscribe", class: "btn btn-large green"%>
   <% end %>
